add json dump and verbose option for output
